# external_ais

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py
core/management/commands/: initadmin.py
core/migrations/: 0001_initial.py
external_ais/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
nginx/: nginxdev.conf
