[project]
name = "external-ais"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-json-widget>=2.1.0",
    "graphene-django>=3.2.3",
    "gunicorn>=23.0.0",
    "requests>=2.32.5",
]
